# tauri-plugin-discord-rpc

./: Cargo.toml  README.md  build.rs  flake.nix  pnpm-lock.yaml
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src/lib/: ConnectionBar.svelte  CustomPayload.svelte  EventLog.svelte  PluginDemo.svelte  activity-form.js  activity-form.test.js  custom-payloads.js  custom-payloads.test.js
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: set_activity_raw.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-discord-rpc/: .gitignore  README.md  package.json
tauri-plugin-discord-rpc/dist-js/: index.cjs  index.d.ts  index.js
tauri-plugin-discord-rpc/examples/tauri-app/: package.json  pnpm-lock.yaml
tauri-plugin-discord-rpc/examples/tauri-app/src/: App.svelte
tauri-plugin-discord-rpc/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-discord-rpc/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-discord-rpc/permissions/: default.toml
tauri-plugin-discord-rpc/permissions/autogenerated/: reference.md
tauri-plugin-discord-rpc/permissions/autogenerated/commands/: is_running.toml
tauri-plugin-discord-rpc/src/: lib.rs  mobile.rs  models.rs
