[package]
name = "tauri-plugin-discord-rpc"
version = "0.1.0"
authors = [ "You" ]
description = "A Tauri plugin for Discord Rich Presence"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-discord-rpc"

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
discord-rich-presence = "1.1.0"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }
